--- a/main.html
+++ b/main.html
@@ -8,47 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table>
-		<thead>
-			<tr>
-				<th> Element </th>
-				<th> ID </th>
-				<th> Type </th>
-				<th> Attributes </th>
-				<th> Lable Required </th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td> Name </td>
-				<td> name </td>
-				<td> Text </td>
-				<td> minlength="3", maxlength="50", required </td>
-				<td> Yes </td>
-			</tr>
-			<tr>
-				<td> Portfolio </td>
-				<td> portfolio </td>
-				<td> URL </td>
-				<td> required </td>
-				<td> Yes </td>
-			</tr>
-			<tr>
-				<td> Favorite Color </td>
-				<td> favColor </td>
-				<td> Color </td>
-				<td> N/A </td>
-				<td> Yes </td>
-			</tr>
-			<tr>
-				<td> Likeness </td>
-				<td> likeness </td>
-				<td> Range </td>
-				<td> min="1", max="100" </td>
-				<td> Yes </td>
-			</tr>
-		</tbody>
-	</table>
+	<form method="post">
+		<h1>Feedback Form</h1>
+	
+		<label for="name">Name: </label>
+		<input type="text" id="name" minlength="3" maxlength="50" required>
+		<br>
+		<label for="portfolio">Portfolio: </label>
+		<input type="url" id="portfolio" required>
+		<br>
+		<label for="favColor">Favourite Color: </label>
+		<input type="color" id="favColor">
+		<br>
+		<label for="likeness">Likeness: </label>
+		<input type="range" id="likeness" min="1" max="100" required>
+		<br>
+		<input type="submit" value="POST">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
